--- a/runoob-tryhtml_intro.html
+++ b/runoob-tryhtml_intro.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>余</title>
 </head>
 <body>
 	<div style="dispaly:block;margin:0 auto; width:50%;background: #ccc;">
